--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <meta name="apple-mobile-web-app-title" content="Arrows Wallpaper">
     <meta name="application-name" content="Arrows Wallpaper">
     <meta name="description" content="Arrows Wallpaper Pattern Search">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+    <link rel="icon" href="logo-arrows.jpg">
     <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="logo-arrows.jpg">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
     <link
       rel="stylesheet"
